# semantic-vault

./: .cursor-rules.md  .env  .env-e  .env.template  .gitignore  .windsurf_persistent_memory.md  AI_DEV_PLAN.md  AI_MODEL_INFRA_OVERVIEW.md  Dockerfile  Dockerfile.diagnostic  Dockerfile.graphiti-local  Dockerfile.graphiti-local-embed  FRIENDLY_UI_PLAN.md  HANDOFF_STATE.md  IMPROVEMENTS.md  README.md  README_GRAPHITI_LOCAL.md  SYSTEM_OVERVIEW.md  TEAM_INTRO_TO_SEMANTIC_STACK.md  WORKSPACE_RULES.md  batch_ingest_markdown.py  create_graphiti_edges.py  document_upload_api.py  dummy.txt  graphiti_embedder_patch.py  graphiti_openai_embed_patch.py  health_check.py  local_embed_server.py  mock_embedding_server.py  notifications.sqlite3  ollama_openai_minimal_proxy.py  openai_embedder_local_patch.py  openai_embedding_proxy.py  patch_and_build_graphiti.sh  requirements.txt  search_graphiti_cli.py  setup_obsidian_gitcrypt.sh  start.sh  verify_graphiti_local_embed.sh  windsurf_watchdog.sh
.cursor/: config.json
.windsurf/: config.yml
docker/: docker-compose.yml
docs/: AI_DEV_PLAN.md  AI_FRIENDLY_PIPELINE_OVERVIEW.md  CSA.md  DEVELOPMENT.md  Obsidian Gitcrypt Guide.md  PROJECT_STATUS.md  README.md  README_GRAPHITI_LOCAL.md  SYSTEM_OVERVIEW.md  audio-transcription.md  embedding_service_decision.md
documents/: SEMANTIC_SYSTEM_FULL_VISION.md  SEMANTIC_SYSTEM_MASTER_CHECKLIST.md  SEMANTIC_SYSTEM_STRATEGY.md
sunset/rust_app/rust_frontend_app/: Cargo.toml
sunset/rust_app/rust_frontend_app/src/: config.rs  search.rs
sunset/rust_app/rust_frontend_app/tests/: integration_search.rs
(+162 files in other folders)
