[package]
name = "rust_frontend_app"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.10", features = ["tokio"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
tokio = { version = "1.36", features = ["full"] }
